--- a/HaCreator/GUI/Quest/QuestEditor.xaml
+++ b/HaCreator/GUI/Quest/QuestEditor.xaml
@@ -376,8 +376,8 @@
 
                                 <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Left">
                                     <TextBlock Text="Quantity:" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                                    <TextBox Text="{Binding Quantity}" Width="40" 
-                                             InputScope="Number" IsEnabled="{Binding IsEquip}"
+                                    <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Width="40" 
+                                             InputScope="Number"
                                              VerticalAlignment="Center"/>
                                 </StackPanel>
 
